# buysmart-agent

./: .env.example  .gitignore  Dockerfile.simple  LICENSE  README.md  pip_err.txt  pip_output.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
backend/: manage.py
backend/requirements/: base.txt  dev.txt
backend/src/agents/: __init__.py  crawler.py  orchestrator.py  query_parser.py  ranker.py
backend/src/config/: asgi.py  urls.py  wsgi.py
backend/src/config/settings/: base.py  local.py  production.py  staging.py
backend/src/core/: admin.py  apps.py  managers.py  models.py  signals.py
backend/src/core/migrations/: 0001_initial.py
backend/src/domains/procurement/: admin.py  apps.py  models.py  placeholder.txt  serializers.py  urls.py  views.py
backend/src/domains/procurement/migrations/: 0001_initial.py
backend/src/domains/procurement/services/: crawl_service.py
backend/src/infrastructure/: llm_client.py  placeholder.txt
backend/src/interfaces/: placeholder.txt
configs/crawling/: default.yaml
configs/environments/: base.yaml  local.yaml  production.yaml  staging.yaml
configs/llm/: default.yaml
data/fixtures/: placeholder.txt
docs/: architecture.md  contributing.md  decision-log.md  index.md  repo-guide.md  roadmap.md  system-overview.md  tradeoffs.md
frontend/apps/dashboard/: placeholder.txt
frontend/tests/: placeholder.txt
platform/infra/compose/: docker-compose.local.yml  placeholder.txt
platform/infra/docker/: backend.Dockerfile  placeholder.txt
platform/infra/scripts/: placeholder.txt
platform/k8s/: README.md
platform/observability/logging/: placeholder.txt
platform/security/: scraping-ethics.md  secrets-management.md  threat-model.md
tools/formatting/: placeholder.txt
tools/lint/: placeholder.txt
tools/precommit/: placeholder.txt
